--- a/src/components/Frame/frame.less
+++ b/src/components/Frame/frame.less
@@ -1,8 +1,10 @@
 .header{
     background-color: rgb(215, 198, 238);
     padding:0 16px;
+    display: flex;
     .logo{
         height:48px;
+        flex:1;
         img{
             max-height: 100%;
         }
