--- a/src/views/Login/login.less
+++ b/src/views/Login/login.less
@@ -1,16 +1,14 @@
-.ko-card {
-  width: 500px;
+.form{
+  width: 50%;
+  min-width: 500px;
   // margin: 100px auto;
   padding: 24px;
+  // border:1px solid #ffcc00;
   box-shadow:0 0 10px #888888;
   border-radius: 24px;
   // 定位居中
   position: fixed;
-  top: 50%;
   left: 50%;
+  top: 50%;
   transform: translate3d(-50%, -50%, 0);
-}
-
-.bottom {
-  display: flex;
 }
